# RefactoringExercise

./: .gitignore  README  billing_statement.py  pyproject.toml  requirements.txt
refactoring_exercise/: billing_statement.py  test_billing_statement.py
tests/: test_billing_statement.py
